XMLtoCSV/objects/unpackaged/objects/PCYC_User_Compliance_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComplianceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ComplianceCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PCYC_Compliance_Date_Timestamp__c</fullName>
        <label>Compliance Date/Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>User Compliance Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Active__c</columns>
        <columns>Alias__c</columns>
        <columns>Approver__c</columns>
        <columns>ComplianceCheck__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Last_Login__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2015_May_Compliance_Snapshot</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Territory__c</columns>
        <columns>ComplianceCheck__c</columns>
        <columns>PCYC_Compliance_Date_Timestamp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/31/2015 12:00 AM</value>
        </filters>
        <label>2015 - May - Compliance Snapshot</label>
        <language>en_US</language>
        <sharedTo>
            <role>Corp</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UCS-{00000000}</displayFormat>
        <label>PCYC User Compliance Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Compliance Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>